restore orcid non-BB test WF